# TrueStructureAssuranceOS

./: .env.example  .gitignore  Makefile  README.md  TRL4_BUILD_SPEC.md  docker-compose.yml  railway.json  render.yaml
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: config.py  main.py
apps/api/app/ai/: base.py  factory.py  mock_provider.py
apps/api/app/core/: deps.py  errors.py  logging.py  security.py
apps/api/app/db/: base.py  session.py
apps/api/app/documents/: extractor.py  validator.py
apps/api/app/models/: audit.py  confidence_score.py  document.py  evidence.py  gap.py  mission_impact.py  mixins.py  organization.py  project.py  readiness.py  report.py  requirement.py  standards.py  test_case.py  test_run.py  trace_link.py  user.py
apps/api/app/reports/: generator.py
apps/api/app/repositories/: confidence_score_repo.py  document_repo.py  evidence_repo.py  gap_repo.py  mission_impact_repo.py  project_repo.py  readiness_repo.py  report_repo.py  requirement_repo.py  test_case_repo.py  trace_link_repo.py  user_repo.py
apps/api/app/schemas/: atvp.py  auth.py  confidence_score.py  document.py  evidence.py  gap.py  (+8 more)
apps/api/migrations/: env.py
apps/api/scripts/: demo_flow.py  seed_demo.py
apps/api/tests/: conftest.py  test_atvp.py  test_auth.py  test_confidence.py  test_db.py  test_documents.py  test_evidence.py  test_gaps.py  test_golden_demo.py  test_health.py  test_mission_impact.py  test_projects.py  test_readiness.py  test_reports.py  test_requirements.py  test_standards.py  test_test_cases.py  test_trace_links.py
(+107 files in other folders)
