[project]
name = "assurance-os-api"
version = "0.1.0"
description = "True Structure Assurance OS - API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "psycopg[binary]>=3.1",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
    "rq>=1.16",
    "redis>=5.0",
    "boto3>=1.34",
    "python-docx>=1.1",
    "pypdf>=4.0",
    "httpx>=0.27",
    "bcrypt>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
